# baheth-bot

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: formatter.yml
bot/: bot.py  vars.py
config/: deploy.yml
core/: base.py
core/utils/: api.py
src/: bot.py  handlers.py  main.py  processors.py  utils.py
src/constants/: __init__.py  application.py  environment.py  markups.py  messages.py  templates.py
